--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,8 +50,7 @@ jobs:
         dragon
     - name: Cloning Project
       run: |
-        git clone ${{ matrix.project-link }}
+        git clone ${{ matrix.project-link }} .
     - name: Building Project
       run: |
-        cd $(dirname $(find . -name DragonMake | xargs)) || cd $(dirname $(find . -name Makefile | xargs)) 
         dragon b
