--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyyaml
-        pip install git+git://github.com/dragonbuild/dragon
+        pip install "git+git://github.com/dragonbuild/dragon"
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install DragonBuild
       run: |
