--- a/src/dragon/config/defaults.yml
+++ b/src/dragon/config/defaults.yml
@@ -8,7 +8,7 @@ Defaults:
   objdir: $proj_build_dir/obj
   signdir: $proj_build_dir/sign
   bridging-header: $name-Bridging-Header.h
-  dragondir: $$DRAGONDIR
+  dragon_root_dir: $$DRAGON_ROOT_DIR
   toolchain-prefix: ''
   tool-prefix: ''
   cc: clang
@@ -20,10 +20,10 @@ Defaults:
   plutil: plutil
   swift: swift
   lipo: lipo
-  logos: $dragondir/src/logos/bin/logos.pl
+  logos: $dragon_root_dir/src/logos/bin/logos.pl
   cargo: cargo
   cargo-nightly: 'cargo +nightly'
-  optool: $dragondir/bin/optool
+  optool: $dragon_root_dir/bin/optool
   stage:
     - 'true'
   wild_recurse: No
@@ -35,15 +35,15 @@ Defaults:
   entfile: ''
   resource_dir: 'Resources'
   fw_dirs:
-    - $dragondir/sdks/iPhoneOS.sdk/System/Library/PrivateFrameworks/
-    - $dragondir/frameworks
+    - $dragon_root_dir/sdks/iPhoneOS.sdk/System/Library/PrivateFrameworks/
+    - $dragon_root_dir/frameworks
   lib_dirs:
-    - $dragondir/lib
+    - $dragon_root_dir/lib
     - '.'
   additional_lib_dirs:
   additional_fw_dirs:
   prefix: []
-  cinclude: '-I$dragondir/include -I$dragondir/vendor/include -I$dragondir/include/_fallback -I$DRAGONDIR/headers/ -I$pwd'
+  cinclude: '-I$dragon_root_dir/include -I$dragon_root_dir/vendor/include -I$dragon_root_dir/include/_fallback -I$DRAGON_ROOT_DIR/headers/ -I$pwd'
   stagedir: '_'
   modulesinternal: '-fmodules -fcxx-modules -fmodule-name=$name -fbuild-session-file=$proj_build_dir/modules/ -fmodules-validate-once-per-build-session -fmodules-prune-after=345600 -fmodules-prune-interval=86400'
 
