--- a/src/dragon/config/defaults.yml
+++ b/src/dragon/config/defaults.yml
@@ -3,10 +3,10 @@
 # Configurations here should provide enough default variables to create the specified module;
 # Please reach out to cynder if you need advice on extending these
 Defaults:
-  proj_build_dir: .dragon
-  builddir: $proj_build_dir/build
-  objdir: $proj_build_dir/obj
-  signdir: $proj_build_dir/sign
+  dragon_data_dir: .dragon
+  builddir: $dragon_data_dir/build
+  objdir: $dragon_data_dir/obj
+  signdir: $dragon_data_dir/sign
   bridging-header: $name-Bridging-Header.h
   dragon_root_dir: $$DRAGON_ROOT_DIR
   toolchain-prefix: ''
@@ -43,9 +43,9 @@ Defaults:
   additional_lib_dirs:
   additional_fw_dirs:
   prefix: []
-  cinclude: '-I$dragon_root_dir/include -I$dragon_root_dir/vendor/include -I$dragon_root_dir/include/_fallback -I$DRAGON_ROOT_DIR/headers/ -I$pwd'
+  cinclude: '-I$dragon_root_dir/include -I$dragon_root_dir/vendor/include -I$dragon_root_dir/include/_fallback -I$dragon_root_dir/headers/ -I$pwd'
   stagedir: '_'
-  modulesinternal: '-fmodules -fcxx-modules -fmodule-name=$name -fbuild-session-file=$proj_build_dir/modules/ -fmodules-validate-once-per-build-session -fmodules-prune-after=345600 -fmodules-prune-interval=86400'
+  modulesinternal: '-fmodules -fcxx-modules -fmodule-name=$name -fbuild-session-file=$dragon_data_dir/modules/ -fmodules-validate-once-per-build-session -fmodules-prune-after=345600 -fmodules-prune-interval=86400'
 
 # Touching these without a firm grasp of what you're doing is likely to break things
 # They serve to abstract how we slap together all of the clang args
