--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,9 +40,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyyaml
         pip install "git+https://github.com/dragonbuild/dragon"
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [[ -f requirements.txt ]]; then pip install -r requirements.txt; fi
     - name: Install DragonBuild
       run: |
         dragon
