--- a/src/dragon/config/targets.yml
+++ b/src/dragon/config/targets.yml
@@ -1,12 +1,13 @@
+---
 Targets:
   sim:
     all:
       targetos: iphonesimulator
       triple: MACHINE
-      arc: yes
+      arc: true
       fw_dirs:
         - /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk
-        - $dragondir/frameworks
+        - $dragon_root_dir/frameworks
       sysroot: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk
       archs:
         - MACHINE
@@ -15,8 +16,8 @@ Targets:
       targetos: iphoneos
       targetvers: 10.0
       triple: arm64-apple-ios$targetvers
-      arc: yes
-      sysroot: $dragondir/sdks/iPhoneOS.sdk
+      arc: true
+      sysroot: $dragon_root_dir/sdks/iPhoneOS.sdk
       archs:
         - arm64
         - arm64e
@@ -24,8 +25,8 @@ Targets:
     all:
       targetos: watchos
       targetvers: 5.0
-      arc: yes
-      sysroot: $dragondir/sdks/WatchOS.sdk
+      arc: true
+      sysroot: $dragon_root_dir/sdks/WatchOS.sdk
       archs: arm64_32
   host:
     all:
