--- a/src/dragon/config/types.yml
+++ b/src/dragon/config/types.yml
@@ -1,3 +1,4 @@
+---
 Types:
   comprehensive:
   app:
@@ -5,19 +6,19 @@ Types:
       - has_build_files
     variables:
       install_location: '/Applications/'
-      target: '$proj_build_dir/$stagedir/$location/$name.app/$name'
+      target: '$dragon_data_dir/$stagedir/$location/$name.app/$name'
   application:
     required_states:
       - has_build_files
     variables:
       install_location: '/Applications/'
-      target: '$proj_build_dir/$stagedir/$location/$name.app/$name'
+      target: '$dragon_data_dir/$stagedir/$location/$name.app/$name'
   tweak-jailed:
     required_states:
       - has_build_files
     variables:
       install_location: '/Applications/'
-      target: '$proj_build_dir/$stagedir/$location/$name.app/$name'
+      target: '$dragon_data_dir/$stagedir/$location/$name.app/$name'
       loader: DragonLoad
       embed-libs:
         - CydiaSubstrate
@@ -32,7 +33,7 @@ Types:
       - deb
     variables:
       install_location: '/Library/MobileSubstrate/DynamicLibraries/'
-      build_target_file: '$proj_build_dir/$stagedir/$location$name.dylib'
+      build_target_file: '$dragon_data_dir/$stagedir/$location$name.dylib'
       hooker-priority: libhooker
       lang: logos
       lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000 -framework CydiaSubstrate'
@@ -40,7 +41,7 @@ Types:
         - UIKit
         - Foundation
       stage2:
-        - 'cp $name.plist $proj_build_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist 2>/dev/null  || python3 -m dragongen.bfilter $proj_build_dir/DragonMake $name > $proj_build_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist'
+        - 'cp $name.plist $dragon_data_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist 2>/dev/null  || python3 -m dragongen.bfilter $dragon_data_dir/DragonMake $name > $dragon_data_dir/_/Library/MobileSubstrate/DynamicLibraries/$name.plist'
   prefs:
     required_states:
       - has_build_files
@@ -48,7 +49,7 @@ Types:
       - deb
     variables:
       install_location: '/Library/PreferenceBundles/$name.bundle'
-      build_target_file: '$proj_build_dir/$stagedir$location/$name'
+      build_target_file: '$dragon_data_dir/$stagedir$location/$name'
       libs:
         - 'substrate'
       lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000 -framework Preferences'
@@ -56,9 +57,9 @@ Types:
         - UIKit
         - Foundation
       stage2:
-        - 'mkdir -p .dragon/_/Library/PreferenceLoader/Preferences/'
-        - 'cp entry.plist .dragon/_/Library/PreferenceLoader/Preferences/$name.plist 2> /dev/null'
-        - 'cp -R Resources/ $proj_build_dir/$stagedir/$location'
+        - 'mkdir -p $dragon_data_dir/_/Library/PreferenceLoader/Preferences/'
+        - 'cp entry.plist $dragon_data_dir/_/Library/PreferenceLoader/Preferences/$name.plist 2> /dev/null'
+        - 'cp -R Resources/ $dragon_data_dir/$stagedir/$location'
   bundle:
     required_states:
       - has_build_files
@@ -66,13 +67,13 @@ Types:
       - deb
     variables:
       install_location: '/Library/$name/'
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name.bundle/$name'
+      build_target_file: '$dragon_data_dir/$stagedir/$location/$name.bundle/$name'
       lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000'
       frameworks:
         - UIKit
         - Foundation
       stage2:
-        - 'cp -R Resources/ $proj_build_dir/$stagedir/$location/$name.bundle/'
+        - 'cp -R Resources/ $dragon_data_dir/$stagedir/$location/$name.bundle/'
 
   framework:
     required_states:
@@ -81,16 +82,17 @@ Types:
       - deb
     variables:
       install_location: '/Library/Frameworks/$name.framework'
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name'
+      build_target_file: '$dragon_data_dir/$stagedir/$location/$name'
+      public_headers: '$dragon_root_dir/include/'
       lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000'
       frameworks:
         - Foundation
       stage2:
-        - 'cp -R Resources/ $proj_build_dir/$stagedir/$location'
-        - 'cp -R $proj_build_dir/$stagedir$location $$DRAGONDIR/frameworks/$name.framework'
-        - 'if [ ! -z "$public_headers" ]; then
-           mkdir -p $proj_build_dir/$stagedir/$location/Headers;
-           cp $public_headers $proj_build_dir/$stagedir/$location/Headers;
+        - 'cp -R Resources/ $dragon_data_dir/$stagedir/$location'
+        - 'cp -R $dragon_data_dir/$stagedir$location $dragon_root_dir/frameworks/$name.framework'
+        - 'if ! [ -z "$public_headers" ]; then
+           mkdir -p $dragon_data_dir/$stagedir/$location/Headers;
+           cp $public_headers $dragon_data_dir/$stagedir/$location/Headers;
            fi'
   resource-bundle:
     required_states:
@@ -119,8 +121,8 @@ Types:
       - deb
       - raw
     variables:
-      install_location: 'usr/lib'
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name.dylib'
+      install_location: '/usr/lib'
+      build_target_file: '$dragon_data_dir/$stagedir/$location/$name.dylib'
       ldflags: '-install_name $location$name.dylib'
       lopts: '-dynamiclib -ggdb -Xlinker -segalign -Xlinker 4000'
       stage2:
@@ -133,7 +135,7 @@ Types:
       - raw
     variables:
       install_location: '/usr/bin'
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name'
+      build_target_file: '$dragon_data_dir/$stagedir/$location/$name'
       stage2:
         - 'true;'
   binary:
@@ -144,7 +146,7 @@ Types:
       - raw
     variables:
       install_location: '/usr/bin'
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name'
+      build_target_file: '$dragon_data_dir/$stagedir/$location/$name'
       stage2:
         - 'true;'
   tool:
@@ -156,7 +158,7 @@ Types:
     variables:
       install_location: '/usr/bin'
       lopts: ''
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name'
+      build_target_file: '$dragon_data_dir/$stagedir/$location/$name'
       stage2:
         - 'true;'
   static:
@@ -168,7 +170,7 @@ Types:
     variables:
       install_location: '/usr/lib'
       lopts: ''
-      build_target_file: '$proj_build_dir/$stagedir/$location/$name.a'
+      build_target_file: '$dragon_data_dir/$stagedir/$location/$name.a'
       stage2:
         - 'true;'
   raw:
