--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: https://give.thetrevorproject.org/give/330001/#!/donation/checkout
+custom: https://give.thetrevorproject.org/fundraiser/4567595
