--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,10 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: tests
+name: Main Repo Tests
 
 on:
   push:
-    paths-ignore:
-      - '**/*.md'
-      - '**/*.txt'
-    branches:
-      - master
-      - 'dev/**'
-  pull_request:
     paths-ignore:
       - '**/*.md'
       - '**/*.txt'
