--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,17 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Main Repo Tests
+name: tests
 
 on:
   push:
+    paths-ignore:
+      - '**/*.md'
+      - '**/*.txt'
+    branches:
+      - master
+      - 'dev/**'
+  pull_request:
     paths-ignore:
       - '**/*.md'
       - '**/*.txt'
