--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,23 +1,17 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: tests
+name: Tests
 
 on:
   push:
     paths-ignore:
       - '**/*.md'
       - '**/*.txt'
-    branches:
-      - master
-      - 'dev/**'
   pull_request:
     paths-ignore:
       - '**/*.md'
       - '**/*.txt'
-    branches:
-      - master
-      - 'dev/**'
 
 jobs:
   tests:
@@ -41,8 +35,17 @@ jobs:
 
     - name: Install dependencies
       run: |
+        # Checkout relevant repo (e.g., main repo branch or fork)
+        REPO=${{ github.event.pull_request.head.repo.full_name }}
+        REF=${{ github.event.pull_request.head.ref }}
+
+        if [[ -z "$REPO" ]]; then
+          REPO=${{ github.repository }}
+          REF=${{ github.ref }}
+        fi
+
         python -m pip install --upgrade pip
-        pip install "git+https://github.com/dragonbuild/dragon"
+        pip install "git+https://github.com/$REPO@$REF"
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Install dragon
